# VideoGameDatabase

./: CMakeLists.txt  README.md
header/: collection.hpp  fileManip.hpp  gamegallery.hpp  search.hpp  search_genre.hpp  search_name.hpp  search_pub.hpp  search_year.hpp  sort_genre.hpp  sort_name.hpp  sort_pub.hpp  sort_year.hpp  sorter.hpp  videogame.hpp
src/: JSONmain.cpp  collection.cpp  filemanip.cpp  gamegallery.cpp  main.cpp  sort_genre.cpp  sort_name.cpp  sort_pub.cpp  sort_year.cpp  videogame.cpp
tests/: collectiontests.hpp  fileManipTests.hpp  searchtest.hpp  sortertests.hpp  test.cpp  videogametests.hpp
